[package]
name = "rust_playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
thiserror = "1.0.40"
reqwest = { version = "0.11.12", features = ["rustls-tls", "blocking"] }
scraper = "0.13.0"
async-channel = "1.8.0"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
